Update password reset email

--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,14 +1,15 @@
 {% load i18n %}{% load url from future %}{% autoescape off %}
-
 Une personne a récemment demandé à réinitialiser votre mot de passe IONISx.
 
-Cliquez sur le lien suivant pour changer votre mot de passe.
+Cliquez sur le lien suivant pour le changer :
 {% block reset_link %}
 https://{{domain}}{% url 'student.views.password_reset_confirm_wrapper' uidb36=uid token=token %}
 {% endblock %}
 
-Vous n’avez pas demandé ce changement ? Vous pouvez ignorer cet email, votre mot de passe est toujours le même.
+Vous n’avez pas effectué cette demande ? Vous pouvez ignorer cet email, votre mot de passe est toujours le même.
 
--- 
 L’équipe IONISx
+
+----
+Ceci est un message automatique envoyé par IONISx, ne pas y répondre.
 {% endautoescape %}
