--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,5 +1,4 @@
-{% load i18n %}{% load url from future %}{% autoescape off %}
-Une personne a récemment demandé à réinitialiser votre mot de passe IONISx.
+{% load i18n %}{% load url from future %}{% autoescape off %}Une personne a récemment demandé à réinitialiser votre mot de passe IONISx.
 
 Cliquez sur le lien suivant pour le changer :
 {% block reset_link %}
