Add missing period

--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -7,7 +7,7 @@ https://{{domain}}{% url 'student.views.password_reset_confirm_wrapper' uidb36=u
 
 Vous n’avez pas effectué cette demande ? Vous pouvez ignorer cet email, votre mot de passe est toujours le même.
 
-L’équipe IONISx
+L’équipe IONISx.
 
 ----
 Ceci est un message automatique envoyé par IONISx, ne pas y répondre.
