--- a/static/css/main.css
+++ b/static/css/main.css
@@ -102,6 +102,11 @@ ul {
     display: none;
 }
 
+.content-wrapper .home .courses .course header.course-preview hgroup h2 .course-number,
+.content-wrapper .find-courses .courses .course header.course-preview hgroup h2 .course-number {
+    display: none;
+}
+
 .view-register .content-wrapper .container,
 .view-register .content-wrapper .introduction,
 .view-login .content-wrapper .container,
