Remove background so images don’t load

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -428,6 +428,7 @@ header.global ol.user > li.primary > a.dropdown.active {
 
 header.global ol.user > li.primary > a > span.avatar {
     display: none;
+    background: none;
 }
 
 /* ==========================================================================
