--- a/templates/courseware/course_about.html
+++ b/templates/courseware/course_about.html
@@ -224,7 +224,7 @@
             ##       or something allowing themes to do whatever they
             ##       want here (and on this whole page, really).
               <%
-                tweet_action = u"http://twitter.com/intent/tweet?text=Je+suis+inscrit+au+cours+« {course_name} »+sur+@IONISx".format(course_name=get_course_about_section(course, 'title'))
+                tweet_action = u"http://twitter.com/intent/tweet?text=Je+viens+de+m’inscrire+au+cours+« {course_name} »+sur+@IONISx".format(course_name=get_course_about_section(course, 'title'))
               %>
               <a href="${tweet_action}" target="_blank" class="share">
                 <img src="${static.url('images/social/twitter-sharing.png')}" alt="Tweet that you've registered for this course">
