--- a/static/css/main.css
+++ b/static/css/main.css
@@ -763,12 +763,16 @@ section.course-info section.details .inner-wrapper section.faq article.response:
    Course info
    ========================================================================== */
 
-.info-wrapper section.updates section article h3 {
+div.info-wrapper section.updates section article h3 {
     font-size: 0.875em;
     color: #2daae1;
     letter-spacing: 1px;
     text-transform: uppercase;
     margin: 30px 0 0 0;
+}
+
+div.info-wrapper section.handouts {
+    display: none;
 }
 
 /* ==========================================================================
