Fix course static pages titles style

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -775,6 +775,18 @@ div.info-wrapper section.handouts {
     display: none;
 }
 
+
+/* ==========================================================================
+   Course static pages
+   ========================================================================== */
+
+.xmodule_display.xmodule_StaticTabModule h1 {
+    margin: 0 0 1em 0;
+    padding: 0 0 .5em 0;
+    font-size: 1.6em;
+    font-weight: 600;
+}
+
 /* ==========================================================================
    Courseware
    ========================================================================== */
