--- a/templates/courseware/course_about.html
+++ b/templates/courseware/course_about.html
@@ -127,75 +127,75 @@
     <div class="intro-inner-wrapper">
       <div class="table">
       <section class="intro">
-        <hgroup>
-          <h1>
-            ${get_course_about_section(course, "title")}
-          </h1>
-          <div class="info">
-            <span class="course-id">${course.display_number_with_default | h}</span>
-            <span class="university">${get_course_about_section(course, "university")}</span>
-          </div>
-        </hgroup>
-
-        <div class="main-cta">
-        %if user.is_authenticated() and registered:
-          %if show_courseware_link:
-            <a href="${course_target}">
-          %endif
-
-          <span class="register disabled">${_("You are registered for this course")}</span>
-
-          %if show_courseware_link:
-            <strong>${_("View Courseware")}</strong>
-            </a>
-          %endif
-
-        %elif in_cart:
-          <span class="add-to-cart">
-            ${_('This course is in your <a href="{cart_link}">cart</a>.').format(cart_link=cart_link)}
-          </span>
-        %elif settings.FEATURES.get('ENABLE_PAID_COURSE_REGISTRATION') and registration_price:
-          <%
-          if user.is_authenticated():
-            reg_href = "#"
-            reg_element_id = "add_to_cart_post"
-          else:
-            reg_href = reg_then_add_to_cart_link
-            reg_element_id = "reg_then_add_to_cart"
-          %>
-          <a href="${reg_href}" class="add-to-cart" id="${reg_element_id}">
-            ${_("Add {course.display_number_with_default} to Cart ({currency_symbol}{cost})")\
-              .format(course=course, currency_symbol=settings.PAID_COURSE_REGISTRATION_CURRENCY[1],
-                      cost=registration_price)}
+        % if get_course_about_section(course, "video"):
+          <a href="#video-modal" class="media" rel="leanModal">
+            <div class="hero">
+              <img src="${course_image_url(course)}" alt="" />
+              <div class="play-intro"></div>
+            </div>
           </a>
-          <div id="register_error"></div>
-        % elif is_course_full:
-          <span class="register disabled">
-            ${_("Course is full")}
-          </span>
         %else:
-          <a href="#" class="register">S’inscrire à ce cours</a>
-          <div id="register_error"></div>
-        %endif
-        </div>
+          <div class="media">
+            <div class="hero">
+              <img src="${course_image_url(course)}" alt="" />
+            </div>
+          </div>
+        % endif
+        <div class="metadata">
+          <hgroup>
+            <h1>
+              ${get_course_about_section(course, "title")}
+            </h1>
+            <div class="info">
+              <span class="university">${get_course_about_section(course, "university")}</span>
+            </div>
+          </hgroup>
+          <div class="short-description">
+            <p>${get_course_about_section(course, 'short_description')}</p>
+          </div>
+          </div>
+          <div class="main-cta">
+            %if user.is_authenticated() and registered:
+              %if show_courseware_link:
+                <a href="${course_target}">
+              %endif
+              <span class="register disabled">${_("You are registered for this course")}</span>
 
-      </section>
-      % if get_course_about_section(course, "video"):
-      <a href="#video-modal" class="media" rel="leanModal">
-        <div class="hero">
-          <img src="${course_image_url(course)}" alt="" />
-          <div class="play-intro"></div>
-        </div>
-      </a>
-      %else:
-      <div class="media">
-        <div class="hero">
-          <img src="${course_image_url(course)}" alt="" />
-        </div>
+              %if show_courseware_link:
+                <strong>${_("View Courseware")}</strong>
+                </a>
+              %endif
+
+              %elif in_cart:
+                <span class="add-to-cart">
+                  ${_('This course is in your <a href="{cart_link}">cart</a>.').format(cart_link=cart_link)}
+              </span>
+              %elif settings.FEATURES.get('ENABLE_PAID_COURSE_REGISTRATION') and registration_price:
+              <%
+                if user.is_authenticated():
+                  reg_href = "#"
+                  reg_element_id = "add_to_cart_post"
+                else:
+                  reg_href = reg_then_add_to_cart_link
+                  reg_element_id = "reg_then_add_to_cart"
+              %>
+                <a href="${reg_href}" class="add-to-cart" id="${reg_element_id}">
+                  ${_("Add {course.display_number_with_default} to Cart ({currency_symbol}{cost})")\
+                    .format(course=course, currency_symbol=settings.PAID_COURSE_REGISTRATION_CURRENCY[1], cost=registration_price)}
+                </a>
+                <div id="register_error"></div>
+              % elif is_course_full:
+                <span class="register disabled">
+                  ${_("Course is full")}
+                </span>
+              %else:
+                <a href="#" class="register">S’inscrire à ce cours</a>
+                <div id="register_error"></div>
+              %endif
+            </div>
+        </section>
       </div>
-      % endif
     </div>
-      </div>
   </header>
 
   <section class="container">
